src/test/ui/borrowck/borrowck-and-init.stderr
error[E0381]: used binding `i` isn't initialized in all conditions
  --> $DIR/borrowck-and-init.rs:5:20
   |
LL |     let i: isize;
   |         - binding declared here but left uninitialized
LL |
LL |     println!("{}", false && { i = 5; true });
   |                               ----- binding initialized here in some conditions
LL |     println!("{}", i);
   |                    ^ `i` used here but it isn't initialized in all conditions
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
